RESOLVED FIXED11172
REGRESSION (NativeListBox): OPTION text paints over the edge of the select element at http://jobs.apple.com/
https://bugs.webkit.org/show_bug.cgi?id=11172
Summary REGRESSION (NativeListBox): OPTION text paints over the edge of the select el...
Chris Petersen
Reported 2006-10-05 08:57:33 PDT
* SUMMARY OPTION text paints over the edge of the select element at http://jobs.apple.com/. Basically, the select element doesn't accommodate the option text by increasing it's width. I have attached a reduction of the main page * STEPS TO REPRODUCE 1. With r16801, open "apple_jobs.html". 2. Select 'United States' and 'California' from the select popup menus. 3. Notice the select list box doesn't change it's width to reflect this change. * RESULTS The select list box should change it's width to accommodate the child option elements but doesn't * REGRESSION Yes, this works in stock Safari under 10.4.7.
Attachments
Select list box test case (6.01 KB, text/html)
2006-10-05 08:58 PDT, Chris Petersen
no flags
patch (4.61 KB, patch)
2006-10-12 23:19 PDT, Adele Peterson
adele: review+
Chris Petersen
Comment 1 2006-10-05 08:58:59 PDT
Created attachment 10927 [details] Select list box test case
Chris Petersen
Comment 2 2006-10-05 09:12:43 PDT
This filed as <rdar://problem/4762453>
mitz
Comment 3 2006-10-05 13:38:46 PDT
*** Bug 11133 has been marked as a duplicate of this bug. ***
mitz
Comment 4 2006-10-05 13:40:17 PDT
Note that in general a listbox may be styled to be narrower than the longest item, so the clipping should be fixed as well as the layout in this case.
mitz
Comment 5 2006-10-10 10:40:37 PDT
*** Bug 11241 has been marked as a duplicate of this bug. ***
Adele Peterson
Comment 6 2006-10-12 23:19:16 PDT
Adele Peterson
Comment 7 2006-10-12 23:38:43 PDT
Comment on attachment 11061 [details] patch Anders reviewed this
Adele Peterson
Comment 8 2006-10-12 23:38:58 PDT
Committed revision 17026.
mitz
Comment 9 2006-10-13 01:07:10 PDT
(In reply to comment #4) > Note that in general a listbox may be styled to be narrower than the longest > item, so the clipping should be fixed as well as the layout in this case. > The patch did not address this case (as you can see in the CC list for this bug). I have re-opened bug 11133 to track it.
Note You need to log in before you can comment on or make changes to this bug.