LayoutTests:

Reviewed by Anders.

        - Test for http://bugs.webkit.org/show_bug.cgi?id=11172
          REGRESSION (NativeListBox): OPTION text paints over the edge of the select element at http://jobs.apple.com/

        * fast/forms/listbox-width-change-expected.txt: Added.
        * fast/forms/listbox-width-change-expected.png: Added.
        * fast/forms/listbox-width-change-expected.checksum: Added.
        * fast/forms/listbox-width-change.html: Added.

WebCore:

        Reviewed by Anders.

        - Fix for http://bugs.webkit.org/show_bug.cgi?id=11172
          REGRESSION (NativeListBox): OPTION text paints over the edge of the select element at http://jobs.apple.com/
        
         Test: fast/forms/listbox-width-change.html

        * rendering/RenderListBox.cpp: (WebCore::RenderListBox::updateFromElement):
          When the options change, call setNeedsLayoutAndMinMaxRecalc.



git-svn-id: svn://svn.chromium.org/blink/trunk@17026 bbb929c8-8fbe-4397-9dbb-9b2b20218538