third_party/WebKit/WebCore/rendering/RenderListBox.cpp
@@ -105,6 +105,7 @@ void RenderListBox::updateFromElement()
         }
         m_optionsWidth = static_cast<int>(ceilf(width));
         m_optionsChanged = false;
+        setNeedsLayoutAndMinMaxRecalc();
     }
 }
 
